# llvm-project

clang-tools-extra/clang-apply-replacements/: CMakeLists.txt
clang-tools-extra/clang-change-namespace/: CMakeLists.txt
clang-tools-extra/clang-doc/: CMakeLists.txt
clang-tools-extra/clang-include-fixer/: CMakeLists.txt
clang-tools-extra/clang-include-fixer/find-all-symbols/: CMakeLists.txt
clang-tools-extra/clang-move/: CMakeLists.txt
clang-tools-extra/clang-query/: CMakeLists.txt
clang-tools-extra/clang-reorder-fields/: CMakeLists.txt
clang-tools-extra/clang-tidy/: CMakeLists.txt
clang-tools-extra/clangd/: CMakeLists.txt
clang-tools-extra/clangd/indexer/: CMakeLists.txt
clang-tools-extra/modularize/: CMakeLists.txt
clang-tools-extra/pp-trace/: CMakeLists.txt
clang-tools-extra/tool-template/: CMakeLists.txt
clang/lib/: CMakeLists.txt
clang/lib/AST/: ASTImporter.cpp  ComputeDependence.cpp  Expr.cpp  ExprCXX.cpp  ExprClassification.cpp  ExprConstant.cpp  ItaniumMangle.cpp  JSONNodeDumper.cpp  StmtPrinter.cpp  StmtProfile.cpp  TextNodeDumper.cpp  TypePrinter.cpp
clang/lib/ASTMatchers/: ASTMatchersInternal.cpp
clang/lib/Analysis/: ExprMutationAnalyzer.cpp
clang/lib/Basic/: IdentifierTable.cpp  LangStandards.cpp
clang/lib/Driver/: Types.cpp
clang/lib/EG/: CMakeLists.txt  EGDatabase.cpp
clang/lib/Format/: FormatToken.cpp
clang/lib/Frontend/: CMakeLists.txt  CompilerInstance.cpp  CompilerInvocation.cpp  FrontendActions.cpp
clang/lib/FrontendTool/: CMakeLists.txt  ExecuteCompilerInvocation.cpp
clang/lib/Index/: IndexBody.cpp
(+82 files in other folders)
